--- a/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-002.json
+++ b/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-002.json
@@ -2,46 +2,58 @@
   "useCaseId": "UC-002",
   "tasksByPersona": [
     {
-      "personaId": "P-006",
+      "personaId": "P-005",
       "tasks": [
-        "Checks cognitive game progress for multiple elderly clients on ALFRED's dashboard",
-        "Manually selects which cognitive game sessions to record and share",
-        "Respects each clients privacy preferences when managing data logging",
-        "Encourages clients like Elena to try new, more challenging cognitive games",
-        "Balances clients enthusiasm and resistance while coordinating care",
-        "Configures ALFRED settings to suit individual client needs and privacy",
-        "Reflects on the challenges of supporting diverse cognitive engagement levels among clients"
+        "Reluctantly agrees to try ALFRED’s cognitive games after caregiver suggestion",
+        "Insists that no personal data be shared with anyone including caregiver, family, or medical staff",
+        "Demands all communication with ALFRED be formal and only initiated by explicit activation",
+        "Starts a simple memory game on ALFRED while explicitly avoiding difficult challenges",
+        "Maintains strict boundaries to protect privacy and autonomy",
+        "Prefers silence and minimal interaction from ALFRED once game starts",
+        "Avoids engaging in social or video interactions via ALFRED",
+        "Expresses stubbornness and skepticism towards technology through clipped, formal commands",
+        "Seeks to retain full control over when and how ALFRED is used"
       ]
     },
     {
       "personaId": "P-002",
       "tasks": [
-        "Requests new brain exercises from ALFRED based on personal interest",
-        "Plays adapted memory games that combine physical and cognitive tasks",
-        "Interacts with ALFRED using a friendly, informal conversational style",
-        "Shares gaming progress openly with her caregiver Sarah",
-        "Invites family members to join video calls through ALFRED for social connection",
-        "Expresses curiosity and eagerness by exploring new cognitive challenges",
-        "Enjoys spontaneous chats during gameplay enhancing engagement",
-        "Relies on ALFRED to tailor activities to her mild mobility and cognitive abilities"
-      ]
-    },
-    {
-      "personaId": "P-005",
-      "tasks": [
-        "Chooses gentler cognitive activities over more stimulating games",
-        "Expresses frustration with intrusive suggestions for more stimulating games"
+        "Eagerly embraces ALFRED’s cognitive games and notifications",
+        "Accepts and engages with the hardest cognitive challenges offered",
+        "Shares game results and progress with friends through the system",
+        "Allows caregiver to monitor personal data and join video check-ins",
+        "Enjoys detailed explanations and feedback from ALFRED",
+        "Uses ALFRED to initiate and participate in video calls to celebrate achievements",
+        "Feels motivated by competition and social sharing facilitated by ALFRED",
+        "Demonstrates openness to data sharing and social connectivity",
+        "Navigates the system with curiosity and positive engagement"
       ]
     },
     {
       "personaId": "P-004",
       "tasks": [
-        "Accesses ALFRED remotely to monitor older adults during busy shifts",
-        "Ignores cognitive game updates and emotional engagement features",
-        "Prioritizes clinical efficiency over informal interactions",
-        "Overrides consent settings when necessary to ensure proper care",
-        "Maintains a pragmatic approach contrasting with holistic caregiving styles",
-        "Focuses on medical data to support timely interventions"
+        "Reviews health data quickly during busy shifts for patient prioritization",
+        "Experiences frustration due to inability to access data from users refusing sharing",
+        "Prefers receiving formal clinical information rather than emotional or social updates",
+        "Blocks all non-critical notifications during work hours to maintain focus",
+        "Relies on accurate data to enable timely medical interventions",
+        "Maintains professional distance by avoiding emotional engagement with caregiving activities",
+        "Monitors consenting patients’ health data remotely",
+        "Balances workflow efficiency with quality patient care needs"
+      ]
+    },
+    {
+      "personaId": "P-006",
+      "tasks": [
+        "Suggests ALFRED cognitive games to clients to aid recovery",
+        "Monitors clients’ engagement and progress remotely through the system",
+        "Respects client privacy wishes even when it limits monitoring capabilities",
+        "Acts enthusiastically to encourage interactive activities and social engagement",
+        "Responds promptly to all alerts and notifications from clients’ systems",
+        "Initiates video check-ins with clients who allow it",
+        "Balances promoting increased engagement with honoring client autonomy",
+        "Feels tension between professional caregiving goals and client resistance",
+        "Uses ALFRED to tailor care based on clients’ activity and cognitive stimulation data"
       ]
     }
   ]
