--- a/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-003.json
+++ b/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-003.json
@@ -4,22 +4,35 @@
     {
       "personaId": "P-005",
       "tasks": [
-        "Configures ALFRED to minimize interruptions and block intrusive apps or features",
-        "Balances desire for independence with need for support in system interactions",
-        "Maintains guarded behavior toward system nudges encouraging engagement"
+        "Responds to ALFRED's gentle reminders to drink fluids and eat balanced meals",
+        "Activates ALFRED's voice assistant only when needed to avoid unsolicited interactions",
+        "Manages her privacy settings to prevent data sharing with caregivers",
+        "Dismissing reminders from ALFRED that feel intrusive",
+        "Prefers to confirm hydration and meal intake offline without system involvement",
+        "Expresses a desire for minimal explanations from ALFRED during interactions",
+        "Avoids video check-ins initiated via ALFRED in favor of private conversations",
+        "Experiences wariness and skepticism about technology and data privacy",
+        "Feels overwhelmed by frequent or unsolicited notifications and prefers fewer interruptions",
+        "Maintains control over her interactions and data despite needing support",
+        "Acknowledges need for assistance but limits ALFRED’s proactive communications",
+        "Engages selectively with social activity suggestions to avoid feeling pressured"
       ]
     },
     {
       "personaId": "P-006",
       "tasks": [
-        "Monitors multiple elderly clients' wellbeing through ALFRED's caregiver dashboard",
-        "Manually checks in frequently with clients using ALFRED's messaging feature",
-        "Encourages clients to engage in simple exercises and healthier meal choices",
-        "Invites clients to participate in occasional interactive cognitive and physical games",
-        "Initiates video calls through ALFRED to assess clients' status when concerned",
-        "Respects clients' boundaries by switching to offline communication when video calls are declined",
-        "Feels frustration when limited data hinders timely support and intervention",
-        "Strives to maintain effective communication without overstepping client trust"
+        "Configures ALFRED to send gentle, personalized reminders to Olivia for nutrition and hydration",
+        "Adjusts reminder frequency to prevent overwhelming Olivia with notifications",
+        "Respects Olivia’s strict privacy preferences by limiting data access to adherence logs only",
+        "Monitors Olivia’s engagement and adherence remotely without intruding on her autonomy",
+        "Arranges for ALFRED to suggest local social events quietly to encourage participation",
+        "Attempts to initiate video check-ins through ALFRED but accepts Olivia’s refusal",
+        "Sends carefully worded, formal messages to Olivia via ALFRED’s secure communication channel",
+        "Balances professional caregiving duties with respect for Olivia’s independence",
+        "Wishes for more real-time feedback on Olivia’s adherence to tailor care",
+        "Manages multiple elderly clients’ care using ALFRED’s monitoring capabilities",
+        "Adapts communication style to honor Olivia’s boundaries and privacy demands",
+        "Seeks to maintain communication and support without causing discomfort or pressure"
       ]
     }
   ]
