--- a/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-004.json
+++ b/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-004.json
@@ -4,13 +4,22 @@
     {
       "personaId": "P-005",
       "tasks": [
-        "Expresses frustration when ALFRED's reminders feel nagging or intrusive",
-        "Uses ALFRED sparingly and only for essential interactions",
-        "Enforces a cold and distant tone in social communications via ALFRED",
-        "Values independence and resists technological intrusions into her daily life",
-        "Demands simplicity and clarity in system interactions",
-        "Avoids social warmth or casual communication encouraged by family or system",
-        "Monitors system behavior to ensure compliance with her privacy and formality preferences"
+        "Uses ALFRED to send formal and polite messages to family and friends",
+        "Interrupts ALFRED to correct the phrasing or tone of outgoing messages",
+        "Blocks ALFRED from sharing personal data with family or healthcare providers",
+        "Declines video calls from family, preferring offline check-ins",
+        "Uses ALFRED's push-to-talk feature to send measured responses to daughter's texts",
+        "Avoids mentioning health or mood in communications sent via ALFRED",
+        "Dismisses most notifications related to physical or cognitive exercises",
+        "Insists on formal, respectful communication style regardless of recipient",
+        "Prefers ALFRED to minimize unsolicited notifications and interruptions",
+        "Rejects ALFRED’s suggestions for social activities or games",
+        "Appreciates ALFRED's calm and neutral voice without feature explanations",
+        "Uses ALFRED primarily as a tool to manage essential, formal correspondence",
+        "Maintains strict control over communication content and privacy settings",
+        "Experiences relief that ALFRED respects boundaries but feels isolated",
+        "Expresses skepticism and mistrust toward digital privacy and technology",
+        "Prefers the system to avoid challenging or emotionally taxing interactions"
       ]
     }
   ]
