--- a/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-007.json
+++ b/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-007.json
@@ -2,35 +2,48 @@
   "useCaseId": "UC-007",
   "tasksByPersona": [
     {
-      "personaId": "P-002",
-      "tasks": [
-        "Straps on the ALFRED wearable device",
-        "Responds aloud to ALFREDs exercise suggestions",
-        "Selects advanced stretching routines through voice commands",
-        "Monitors real-time feedback on activity levels",
-        "Engages proactively with water-drinking reminders",
-        "Prefers a lightweight, barely noticeable wearable",
-        "Feels motivated and supported through interactive coaching"
-      ]
-    },
-    {
       "personaId": "P-005",
       "tasks": [
-        "Reluctantly wears the ALFRED wearable device",
-        "Dismisses movement reminders using curt voice commands",
-        "Uses the device as a passive tracker without active engagement"
+        "Wears health sensors as reluctantly agreed after caregiver's insistence",
+        "Responds minimally to ALFRED’s prompts for health measurements such as blood pressure",
+        "Blocks most notifications from ALFRED to maintain privacy",
+        "Refuses to share health data with medical staff or others",
+        "Prefers interactions with ALFRED to be minimal and formal",
+        "Grumbles or expresses unease about using ALFRED and its sensors",
+        "Dismisses ALFRED’s offers for interactive games and social chats",
+        "Answers messages curtly and insists on formal communication only",
+        "Avoids unsolicited advice or check-ins through ALFRED",
+        "Feels invaded by ALFRED’s presence yet isolated due to strict privacy preferences"
       ]
     },
     {
       "personaId": "P-006",
       "tasks": [
-        "Accesses real-time health and activity data via ALFRED dashboard",
-        "Monitors detailed vitals and activity reports for engaged clients",
-        "Sends informal, encouraging messages to motivate users",
-        "Balances proactive care with respecting client data boundaries",
-        "Relies on occasional phone check-ins when data is restricted",
-        "Navigates differences in user autonomy and system interaction daily",
-        "Uses ALFRED to bridge care gaps between active and passive clients"
+        "Checks ALFRED dashboard remotely to monitor multiple elderly clients",
+        "Receives a variety of notifications including critical alerts, reminders, and motivational messages",
+        "Views only minimal health data for Olivia to respect her privacy choices",
+        "Feels frustrated by limited data availability hindering proactive care interventions",
+        "Attempts to engage Olivia via ALFRED’s messaging to suggest exercises and check wellbeing",
+        "Uses interactive games and chats within ALFRED to build emotional connections with clients",
+        "Wishes for better system reconciliation of clients’ privacy demands with caregiver engagement style",
+        "Manages multiple clients’ information simultaneously while juggling workload",
+        "Experiences growing frustration due to clients’ dismissive or private attitudes toward engagement",
+        "Respects clients’ communication preferences even when it limits caregiving effectiveness"
+      ]
+    },
+    {
+      "personaId": "P-004",
+      "tasks": [
+        "Accesses ALFRED to review filtered clinical health data during busy hospital shifts",
+        "Relies on ALFRED to filter out non-critical alerts to avoid distraction",
+        "Quickly prioritizes and responds to flagged irregularities in vital signs",
+        "Justifies automatic logging of vital data regardless of patient consent for clinical care",
+        "Focuses solely on hard clinical data rather than emotional or social information",
+        "Prepares for patient visits using summarized clinical information from ALFRED",
+        "Ignores non-essential information such as social interactions or motivational content",
+        "Maintains clinical detachment, focusing on medical needs over personal dynamics",
+        "Relies on ALFRED for timely and precise health alerts to support urgent interventions",
+        "Does not seek or engage with emotional or social aspects mediated by ALFRED"
       ]
     }
   ]
