--- a/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-013.json
+++ b/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-013.json
@@ -2,29 +2,47 @@
   "useCaseId": "UC-013",
   "tasksByPersona": [
     {
-      "personaId": "P-002",
+      "personaId": "P-004",
       "tasks": [
-        "Configures the voice assistant using natural language commands",
-        "Requests daily to-do lists tailored to her lifestyle",
-        "Explores fitness games and interactive challenges"
-      ]
-    },
-    {
-      "personaId": "P-005",
-      "tasks": [
-        "Maintains cautious reassurance by controlling system boundaries"
+        "Sets up ALFRED device on the user's tablet efficiently",
+        "Connects wearable sensors to ALFRED for health monitoring",
+        "Explains the clinical importance of health monitoring features to the user",
+        "Prioritizes configuring clinical access to health data during work hours",
+        "Insists on health data being readily available during shifts despite user objections",
+        "Configures ALFRED to suppress non-critical alerts during clinical hours",
+        "Focuses on clinical efficiency over user’s privacy concerns",
+        "Demonstrates limited patience when addressing user’s privacy objections",
+        "Negotiates permissions to ensure medical staff access to vital data"
       ]
     },
     {
       "personaId": "P-006",
       "tasks": [
-        "Walks older adults through the initial ALFRED setup process",
-        "Toggles between multiple user profiles on her caregiver console",
-        "Enables motivational exercise reminders for enthusiastic users",
-        "Configures social event suggestions appropriate to user preferences",
-        "Reassures users about data privacy and system boundaries",
-        "Balances encouraging technology adoption with respecting autonomy",
-        "Monitors and supports diverse health and social interaction preferences"
+        "Joins the ALFRED setup remotely to support the user",
+        "Advocates for activating social features like video calls with family",
+        "Suggests enabling light cognitive games to support mental engagement",
+        "Tries to gently explain the benefits of social and cognitive features to the user",
+        "Pushes for flexible data-sharing settings to stay informed about user's wellbeing",
+        "Balances respecting user’s strict privacy demands with need for information",
+        "Supports the user’s preference for minimal notifications and formal communications",
+        "Promises to provide informal check-ins without overwhelming the user",
+        "Advocates for balanced consent controls emphasizing user autonomy",
+        "Maintains a nurturing and flexible caregiving approach during setup"
+      ]
+    },
+    {
+      "personaId": "P-005",
+      "tasks": [
+        "Expresses wariness and discomfort toward new technology during setup",
+        "Insists that personal data remain private and not shared beyond immediate medical necessity",
+        "Rejects social features perceived as challenging or intrusive",
+        "Demands that no one besides herself can access her information",
+        "Requests ALFRED to limit all notifications to avoid overwhelm",
+        "Orders ALFRED to block app installations without explicit permission",
+        "Prefers to interact with ALFRED minimally, using push-to-talk commands only",
+        "Avoids detailed explanations of features and social nudges",
+        "Feels overwhelmed by conflicting caregiver priorities during setup",
+        "Maintains a firm stance on privacy and minimal system interaction"
       ]
     }
   ]
